# rust-programming-language

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
chapter01/hello_cargo/: .gitignore  Cargo.toml  readme.md
chapter01/hello_world/: .gitignore  readme.md
chapter02/guessing_game/: Cargo.toml  readme.md
chapter02/guessing_game/src/: main.rs
chapter03/arrays/: Cargo.toml  readme.md
chapter03/arrays/src/: main.rs
chapter03/booleans/: Cargo.toml  readme.md
chapter03/booleans/src/: main.rs
chapter03/chars/: Cargo.toml  readme.md
chapter03/chars/src/: main.rs
chapter03/control_flow/: Cargo.toml  readme.md
chapter03/control_flow/src/: main.rs
chapter03/floats/: Cargo.toml  readme.md
chapter03/floats/src/: main.rs
chapter03/functions/: Cargo.toml  readme.md
chapter03/functions/src/: main.rs
chapter03/integers/: Cargo.toml  readme.md
chapter03/integers/src/: main.rs
chapter03/tuples/: Cargo.toml  readme.md
chapter03/variables/: Cargo.toml
chapter04/ownership/: Cargo.toml  readme.md
chapter04/references/: Cargo.toml  readme.md
chapter04/slices/: Cargo.toml  readme.md
chapter05/rectangles/: Cargo.toml  readme.md
chapter05/structs/: Cargo.toml  readme.md
chapter06/enums/: Cargo.toml  readme.md
chapter07/restaurant/: Cargo.toml
chapter08/hashmap/: Cargo.toml
chapter08/string/: Cargo.toml
chapter08/vec/: Cargo.toml
chapter09/panic/: Cargo.toml  readme.md
chapter09/result/: Cargo.toml
rustup/: readme.md
scripts/: build.sh  check.sh  ci.sh  clean.sh  clippy.sh  format.sh  release.sh  test.sh
(+25 files in other folders)
