[workspace]
members = [
    "chapter01/hello_cargo",
    "chapter02/guessing_game",
    "chapter03/variables",
    "chapter03/integers",
    "chapter03/floats",
    "chapter03/booleans",
    "chapter03/chars",
    "chapter03/tuples",
    "chapter03/arrays",
    "chapter03/functions",
    "chapter03/control_flow",
    "chapter03/programs/ftoc",
    "chapter03/programs/ctof",
    "chapter03/programs/fibonacci",
    "chapter03/programs/christmas_carol",
    "chapter04/ownership",
    ]
